# MetaProgramming

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
meta/: CMakeLists.txt  static_assert.hpp
meta/UnitTest/: CMakeLists.txt  testStaticAssert.cpp
